--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -53,7 +53,7 @@ body {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 
 /* --------header------- */
@@ -86,6 +86,7 @@ body {
 
 .header {
   background-color: #ffffff;
+  position: relative;
 }
 
 .header-logo {
@@ -96,19 +97,54 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #000000;
-
   margin-right: 93px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .header-accent {
   color: #2196f3;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
-.header-logo:hover,
+/* .header-logo:hover,
 .header-logo:focus,
-.header-logo .header-accent:hover,
-.header-logo .header-accent:focus {
-  color: #f88707;
+.header-accent:hover,
+.header-accent:focus {
+  color: #f88707; 
+} */
+
+.header-logo:hover,
+.header-logo:focus {
+  color: #2196f3;
+}
+
+.header-logo:hover > .header-accent,
+.header-logo:focus > .header-accent {
+  color: #000000;
+}
+
+.navig-box {
+  height: 4px;
+  width: 48px;
+  background-color: #2196f3;
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
+}
+
+.portfolio-navig-box {
+  height: 4px;
+  width: 78px;
+  background-color: #2196f3;
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
 }
 
 .header-link {
@@ -117,6 +153,13 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
+  display: inline-block;
+  align-items: center;
+  text-align: center;
 }
 
 .header-link:hover,
@@ -137,6 +180,10 @@ body {
   color: var(--primari-text-color);
   display: flex;
   align-items: center;
+  transition-property: color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .header-icon {
@@ -211,6 +258,10 @@ body {
   padding: 10px 32px;
   border: 1px solid transparent;
   margin-top: 0;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .hero-batton:hover,
@@ -280,8 +331,13 @@ main {
   gap: 30px;
 }
 
+.foto-img {
+  display: block;
+}
+
 .galleri-img {
   width: calc((100% - 60px) / 3);
+  position: relative;
 }
 
 .section-title-foto {
@@ -293,6 +349,28 @@ main {
   color: var(--title-text-color);
   margin-top: 0;
   margin-bottom: 50px;
+}
+
+.section-description-img {
+  /* height: 70px; */
+  width: 100%;
+  background-color: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  bottom: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+}
+
+.description-img {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  /* text-transform: uppercase; */
+  color: #ffffff;
 }
 
 /* --------avatar-------- */
@@ -369,6 +447,10 @@ main {
   justify-content: center;
   margin-top: 16px;
   color: #afb1b8;
+  transition-property: background-color, color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .avatar-soc-icon {
@@ -428,10 +510,18 @@ main {
   height: 92px;
   align-items: center;
   justify-content: center;
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .clients-icon {
   fill: #afb1b8;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .clients-link:hover,
@@ -468,6 +558,10 @@ footer {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #ffffff;
+  transition-property: color;
+  transition-duration: 500ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .section-address {
@@ -480,14 +574,28 @@ footer {
 
 .footer-accent {
   color: #2196f3;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .footer-logo:hover,
+.footer-logo:focus {
+  color: #2196f3;
+}
+
+.footer-logo:hover > .footer-accent,
+.footer-logo:focus > .footer-accent {
+  color: #ffffff;
+}
+
+/* .footer-logo:hover,
 .footer-logo:focus,
 .footer-logo .footer-accent:hover,
 .footer-logo .footer-accent:focus {
   color: #f88707;
-}
+} */
 
 .footer-address {
   font-style: normal;
@@ -495,6 +603,10 @@ footer {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .footer-address:hover,
@@ -509,6 +621,10 @@ footer {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgb(255, 255, 255, 60%);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .footer-mailto:hover,
@@ -533,7 +649,6 @@ footer {
   display: flex;
   justify-content: center;
   gap: 10px;
-
   padding-top: 20px;
 }
 
@@ -548,6 +663,10 @@ footer {
   margin-top: 16px;
   color: #ffffff;
   margin: 0;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
 }
 
 .footer-soc-icon {
@@ -604,6 +723,16 @@ main.portfolio {
   cursor: pointer;
   border-radius: 4px;
   border: 1px solid transparent;
+  transition-property: background-color, color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
+}
+
+.portfolio .batton:hover,
+.portfolio .batton:focus {
+  background-color: #2196f3;
+  color: #ffffff;
 }
 
 .portfolio .batton.all {
@@ -631,11 +760,7 @@ main.portfolio {
   min-width: 130px;
 }
 
-.portfolio .batton:hover,
-.portfolio .batton:focus {
-  background-color: #2196f3;
-  color: #ffffff;
-}
+/* --------galleri-------- */
 
 .main-galleri {
   display: flex;
@@ -661,8 +786,104 @@ main.portfolio {
   color: var(--primari-text-color);
 }
 
+.galleri-top-text {
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+  height: 100%;
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
+  overflow: auto;
+}
+
+.galleri-top-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.container-main-img {
+  width: calc((100% - 60px) / 3);
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
+}
+
+.container-link-img:hover .galleri-top-text,
+.container-link-img:focus .galleri-top-text {
+  transform: translateY(0);
+}
+
 .container-main-img:hover,
 .container-main-img:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+/* --------model window-------- */
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  /* transition: opacity 250ms linear, visibility 250ms linear; */
+  transition-property: opacity, visibility;
+  transition-duration: 400ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
+}
+
+.modal {
+  width: 528px;
+  min-height: 581px;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition-property: transform;
+  transition-duration: 400ms;
+  transition-timing-function: linear;
+  transition-delay: 0ms;
+}
+
+.backdrop.is-hidden .modal {
+  transform: rotate(180deg) translate(50%, 50%);
+  /* transform: translate(-50%, -50%) scale(0)*/
+}
+
+.modal-btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  padding: 0;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
